# seed-api-actix

./: .env.sample  Cargo.toml
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/clients/: clients_mongo_repository.rs
src/api/clients/routes/: write_routes.rs
src/api/shared/: mod.rs  mongo_repository.rs
src/api/shared/daos/: dbos.rs  mod.rs  mongo_dao.rs  mongo_entity_dao.rs
src/api/shared/repository/: dbos.rs  mod.rs  mongo_dao.rs  mongo_entity_dao.rs  mongo_repository.rs
src/api/shared/token/: authenticated.rs  jwt_claims.rs  mod.rs
src/api/swagger/: mod.rs
src/api/todos/: mod.rs  read_routes.rs  todo_dbo.rs  todo_event_mongo_repository.rs  todos_mongo_dao.rs  todos_mongo_repository.rs  write_routes.rs
src/api/todos/mappers/: events.rs
src/api/todos/routes/: read_routes.rs  write_routes.rs
src/api/todos/services/: mod.rs
src/core/: mod.rs
src/core/shared/: can_get_id.rs  copy_from.rs  mod.rs  repository.rs
src/core/shared/command_handler/: engine.rs  mod.rs
src/core/shared/daos/: mod.rs
src/core/shared/data/: mod.rs
src/core/shared/event_sourcing/: engine.rs  mod.rs
src/core/shared/repositories/: can_fetch_all.rs  dao.rs  entities.rs  mod.rs  query.rs
src/core/shared/token/: context.rs  mod.rs
src/core/todos/: mod.rs  todos_repository.rs
src/core/todos/command_handler/: command_handler_impl.rs
src/core/todos/data/: mod.rs
src/core/todos/reducer/: mod.rs
src/core/todos/services/: mod.rs
src/models/: mod.rs
src/models/clients/shared/: mod.rs
src/models/shared/: errors.rs  jsonapi.rs
src/models/todos/commands/: mod.rs
(+6 files in other folders)
