[package]
name = "seed-api-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = "0.9.66"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
serde = { version = "1.0.203", features = ["derive"] }
async-trait = "0.1.80"
utoipa = { version = "4.2.3", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }
serde_json = "1.0.118"

[dependencies.mongodb]
version = "3.0.0"
features = ["sync"]